feat(ffmpeg): Implement FFMpeg based bink decoding.

--- a/Code/BinkMovie/CMakeLists.txt
+++ b/Code/BinkMovie/CMakeLists.txt
@@ -5,17 +5,35 @@ set(BINKMOVIE_SRC
     subtitlemanager.cpp
     subtitleparser.cpp
     BINKMovie.h
+    MoviePlayer.h
     subtitle.h
     subtitlemanager.h
     subtitleparser.h
 )
 
+if(W3D_BUILD_OPTION_FFMPEG)
+    list(APPEND BINKMOVIE_SRC
+        FFMpegPlayer.cpp
+        FFMpegPlayer.h
+    )
+elseif(W3D_BUILD_OPTION_BINK)
+    list(APPEND BINKMOVIE_SRC
+        BinkPlayer.cpp
+        BinkPlayer.h
+    )
+endif()
+
 # Targets to build.
 add_library(binkmovie STATIC)
 
 target_link_libraries(binkmovie PRIVATE
-    binkstub
     wwcommon
 )
+
+if(W3D_BUILD_OPTION_BINK)
+    target_link_libraries(binkmovie PRIVATE
+        binkstub
+    )
+endif()
 
 target_sources(binkmovie PRIVATE ${BINKMOVIE_SRC})
